--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                     <div class="mySlides">
                       <img src="images/techninlaw_oct2024.jpg" style="width:100%">
-                      <div class="caption">ElectionBot-SC Demo at TechInLaw AIElection '24</div>
+                      <div class="caption">ElectionBot-SC Demo @ TechInLaw AIElection '24</div>
                     </div>
                     
                     <div class="mySlides">
@@ -83,7 +83,7 @@
 
                     <div class="mySlides">
                       <img src="images/aaai23_elections.JPG" style="width:100%">
-                      <div class="caption">AI for Credible Elections Workshop</div>
+                      <div class="caption">AI for Credible Elections Workshop @AAAI '23</div>
                     </div>
 
                     <div class="mySlides">
@@ -93,7 +93,7 @@
 
                     <div class="mySlides">
                       <img src="images/holi2024.jpeg" style="width:100%">
-                      <div class="caption">Holi Celebration @ 2024</div>
+                      <div class="caption">Holi Celebration @ '24</div>
                     </div>
 
                     <!-- Next and previous buttons -->
