--- a/projects/index.html
+++ b/projects/index.html
@@ -92,7 +92,7 @@
                         <i><b>Team: </b>Vishal Pallagani, Bharath Chandra, Kausik Lakkaraju, Biplav Srivastava</i>
                         <p><b>Description: </b>Collaborative Assistants, popularly known as chatbots provide an easy interface for users to obtain answers for their queries. At AI4Society, we build collaborative assistants for various applications such as information retrieval, answer election based questions, help learn puzzle solving through a series of conversations, and obtain information regarding sensor data.</p>
                             <span>
-                                <a style="background-color: #3498db; color: white; padding: 2px 3px; text-decoration: none; border-radius: 4px; margin: 5px 0; display: inline-block;" href="https://sites.google.com/site/biplavsrivastava/research-1/dialog" target="_blank"><b>More Details</b></a>
+                                <a style="background-color: #3498db; color: white; padding: 2px 3px; text-decoration: none; border-radius: 4px; margin: 5px 0; display: inline-block;" href="chatbots_page/index.html" target="_blank"><b>More Details</b></a>
                             </span>
 
                     </td>
