--- a/projects/chatbots_page/index.html
+++ b/projects/chatbots_page/index.html
@@ -39,7 +39,7 @@
   <a href="elections_2024.html" style="text-decoration: none;">
     <b>Get a glimpse of how ElectionBots are being used in the South Carolina Elections 2024!</b>
   </a> 
-  Click to learn more about the impact of ElectionBots on disseminating safe information during election processes.
+  Check out the demonstration of ElectionBot-SC and participate in a user survey to help foster our research.
 </p>
 
                   <p style="text-align: justify;"><span style="background-color: hsl(100, 100%, 50%);"><b>SafeChat</b></span><br>
