update elctionbot-sc page

--- a/projects/chatbots_page/elections_2024.html
+++ b/projects/chatbots_page/elections_2024.html
@@ -35,9 +35,8 @@
                   </h2>
                   <p><b>Contact:</b> Bharath Muppasani <i>(student)</i>, Biplav Srivastava <i>(faculty)</i></p>
                   <p><i><b>Collaborators:</b></i> <br>
-                  <i>(Students)</i> Bharath Muppasani, Kausik Lakkaraju, Vishal Pallagani, Nitin Gupta, Vansh Nagpal, Sara Jones <br>
+                  <i>(Students)</i> Kausik Lakkaraju, Vishal Pallagani, Nitin Gupta, Vansh Nagpal, Sara Jones <br>
                   <i>(Faculty) </i> Brett Robertson, Vignesh Narayanan, Michael Huhns - University of South Carolina; Andrea Hickerson - University of Mississippi; Anita Nikolich - University of Illinois at Urbana Champaign, Tarmo Koppel - University of Tallinn</p>
-
                   <p><i><b>Data Acknowledgements:</b></i> League of Women Voters and South Carolina Election Commission</p>
 
                     <p style="text-align: justify;">We have been working on how to safely collate, disseminate and make comprehensible authentic (election) information to users (voters) starting with official sources (like SC election commission). Our work is part of a bigger effort in research to make chatbots trustworthy along with useful, where election is a trust-sensitive domain; others can be health, education, etc.</p>
