--- a/projects/chatbots_page/elections_2024.html
+++ b/projects/chatbots_page/elections_2024.html
@@ -39,18 +39,26 @@
                   <i>(Faculty) </i> Brett Robertson, Vignesh Narayanan, Michael Huhns - University of South Carolina; Andrea Hickerson - University of Mississippi; Anita Nikolich - University of Illinois at Urbana Champaign, Tarmo Koppel - University of Tallinn</p>
                   <p><i><b>Data Acknowledgements:</b></i> League of Women Voters and South Carolina Election Commission</p>
 
-                    <p style="text-align: justify;">We have been working on how to safely collate, disseminate and make comprehensible authentic (election) information to users (voters) starting with official sources (like SC election commission). Our work is part of a bigger effort in research to make chatbots trustworthy along with useful, where election is a trust-sensitive domain; others can be health, education, etc.</p>
+                    <p style="text-align: justify;">We have been working on how to safely collate, disseminate and make comprehensible authentic (election) information to users (voters) starting with official sources (like SC election commission). ElectionBot-SC is our chatbot to help voters in 2024 US elections in SC and conduct IRB-approved studies. Our work is part of a bigger effort in research to make chatbots trustworthy along with useful, where election is a trust-sensitive domain; others can be health, education, etc.</p>
                   
                     <br>
-                    <div style="display:flex; align-items:center; justify-content: space-around; border: 3px solid black; border-radius: 10px; padding: 10px; width: 70%; margin: 10px auto; background-color: rgba(85, 255, 0, 0.1);">
+                    <div style="display:flex; align-items:center; justify-content: space-around; border: 3px solid black; border-radius: 10px; padding: 10px; width: 90%; margin: 10px auto; background-color: rgba(85, 255, 0, 0.1);">
                         <div style="display:flex; flex-direction:column; align-items:center; justify-content: space-between;">
                             <img src="./images/demo_qr.png" alt="Demo QR Code" style="width:80px; height:80px;" />
-                            <p><b>Try out our ElectionBot-SC demo <a href="http://192.5.87.153/demo/index.html" target="_blank">here</a></b></p>
+                            <p><b>Try demo <a href="http://192.5.87.153/demo/index.html" target="_blank">here</a></b></p>
                         </div>
                         <div style="display:flex; flex-direction:column; align-items:center; justify-content: space-between;">
                             <img src="./images/rct_qr.png" alt="RCT QR Code" style="width:80px; height:80px;" />
-                            <p><b>Participate in our RCT survey <a href="http://192.5.87.153/rct/index.html" target="_blank">here</a></b></p>
+                            <p><b>Participate in RCT study <a href="http://192.5.87.153/rct/index.html" target="_blank">here</a></b></p>
                         </div>
+                        <div style="display:flex; flex-direction:column; align-items:center; justify-content: space-between;">
+                            <img src="./images/survey_qr.png" alt="RCT QR Code" style="width:80px; height:80px;" />
+                            <p><b>Take user survey <a href="https://forms.gle/mLiTNA4wh436UrF76" target="_blank">here</a></b></p>
+                        </div>
+                    </div>
+
+                    <div class="video-container" style="display: flex; justify-content: center;">
+                        <iframe width="560" height="315" src="https://drive.google.com/file/d/1_5hdy4yy7Wm8hCAp4W12bq_2iL5zxEAk/preview" title="ElectionBot-SC" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                   <p><i><b>Representative Publications</b></i></p>
                   <ul>
@@ -63,10 +71,6 @@
                       <i><b>Authors: </b>Bharath Muppasani, Kausik Lakkaraju, Nitin Gupta, Vansh Nagpal, Sara Jones, Biplav Srivastava</i> <br>
                       <a href='../../publications/papers_local/AAAI_25_SafeChat_Demo.pdf' target="_blank">[Paper]</a>
                     </li>
-                    <div class="video-container" style="display: flex; justify-content: center;">
-                        <iframe width="560" height="315" src="https://drive.google.com/file/d/1_5hdy4yy7Wm8hCAp4W12bq_2iL5zxEAk/preview" title="ElectionBot-SC" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
-
                   </ul> 
 
                   
