update to Chatbot page

--- a/projects/chatbots_page/index.html
+++ b/projects/chatbots_page/index.html
@@ -37,13 +37,13 @@
                     <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;">
   <mark style="color:red;"><b>NEW!</b></mark> 
   <a href="elections_2024.html" style="text-decoration: none;">
-    <b>Get a glimpse of how ElectionBots are being used in the South Carolina Elections 2024!</b>
+    <b>Get a glimpse of how ElectionBots, built with SafeChat, are being used in the South Carolina Elections 2024!</b>
   </a> 
-  Check out the demonstration of ElectionBot-SC and participate in a user survey to help foster our research.
+  See demo and participate in user studies.
 </p>
 
                   <p style="text-align: justify;"><span style="background-color: hsl(100, 100%, 50%);"><b>SafeChat</b></span><br>
-                      <i><b>Collaborators: </b><a target="_blank" href="https://vishalpallagani.github.io/">Vishal Pallagani</a>, <a target="_blank" href="https://bharathmuppasani.github.io/index.html">Bharath Muppasani</a>, 
+                      <i><b>Collaborators: </b><a target="_blank" href="https://vishalpallagani.github.io/">Vishal Pallagani</a>, <a target="_blank" href="https://kausik-l.github.io/">Kausik Lakkaraju</a>, <a target="_blank" href="https://bharathmuppasani.github.io/index.html">Bharath Muppasani</a>, 
                         <a target="_blank" href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a></i>
                       <br>
                       SafeChat is an architecture that aims to provide a safe and secure environment for users to interact with AI chatbots across various domains.
@@ -52,8 +52,22 @@
                   <ul>
                     <li>On Safe and Usable Chatbots for Promoting Voter Participation<br> 
                       <i>AAAI AI Magazine</i> <br>
-                      <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/aaai.12109" target="_blank"><b>[Paper]</b></a>
+                      Bharath Muppasani, Vishal Pallagani, Kausik Lakkaraju, Shuge Lei, Biplav Srivastava,
+                                Brett Robertson, Andrea Hickerson, Vignesh Narayanan<br>
+                      <a href='https://onlinelibrary.wiley.com/doi/full/10.1002/aaai.12109'
+                                    target="_blank">[Paper]</a>
                     </li>
+                    <li>LLMs for Financial Advisement: A Fairness and Efficacy Study in Personal Decision
+                          Making<br>
+                      <i>4th ACM International Conference on AI in Finance: ICAIF'23, New York, 2023</i><br>
+                      Kausik Lakkaraju, Sara Rae Jones, Sai Krishna Revanth Vuruma, Vishal Pallagani, Bharath
+                      C Muppasani and
+                      Biplav Srivastava<br>
+                      <a href='https://dl.acm.org/doi/fullHtml/10.1145/3604237.3626867'
+                          target="_blank">[Paper]</a>
+                      <a href='./presentations/ICAIF2023_KL_Pres.pdf' target="_blank">[Slides]</a>
+                      </li>
+                      
                   </ul>
                   <p><i><b>Representative Activities</b></i></p>
                   <ul>
