--- a/projects/chatbots_page/elections_2024.html
+++ b/projects/chatbots_page/elections_2024.html
@@ -33,11 +33,11 @@
                     <span style="background-color:hsl(100, 100%, 50%);height:20px;width:20px;margin-right:10px;border:1px solid black;"></span>
                     ElectionBot-SC
                   </h2>
-                  <p><b>Contact:</b> Bharath Muppasani <i>(student)</i>, Biplav Srivastava <i>(faculty)</i></p>
-                  <p><i><b>Collaborators:</b></i> <br>
+                  <b>Contact:</b> Bharath Muppasani <i>(student)</i>, Biplav Srivastava <i>(faculty)</i><br>
+                  <i><b>Collaborators:</b></i> 
                   <i>(Students)</i> Kausik Lakkaraju, Vishal Pallagani, Nitin Gupta, Vansh Nagpal, Sara Jones <br>
-                  <i>(Faculty) </i> Brett Robertson, Vignesh Narayanan, Michael Huhns - University of South Carolina; Andrea Hickerson - University of Mississippi; Anita Nikolich - University of Illinois at Urbana Champaign, Tarmo Koppel - University of Tallinn</p>
-                  <p><i><b>Data Acknowledgements:</b></i> League of Women Voters and South Carolina Election Commission</p>
+                  <i>(Faculty) </i> Brett Robertson, Vignesh Narayanan, Michael Huhns - University of South Carolina; Andrea Hickerson - University of Mississippi; Anita Nikolich - University of Illinois at Urbana Champaign, Tarmo Koppel - University of Tallinn<br>
+                  <i><b>Data Acknowledgements:</b></i> League of Women Voters and South Carolina Election Commission
 
                     <p style="text-align: justify;">We have been working on how to safely collate, disseminate and make comprehensible authentic (election) information to users (voters) starting with official sources (like SC election commission). ElectionBot-SC is our chatbot to help voters in 2024 US elections in SC and conduct IRB-approved studies. Our work is part of a bigger effort in research to make chatbots trustworthy along with useful, where election is a trust-sensitive domain; others can be health, education, etc.</p>
                   
