--- a/projects/chatbots_page/index.html
+++ b/projects/chatbots_page/index.html
@@ -71,7 +71,9 @@
                   </ul>
                   <p><i><b>Representative Activities</b></i></p>
                   <ul>
-                    <li>Vansh's implementation of SafeChat etc. <br>
+                    <li>Use of SafeChat in CSCE 580 (Fall 2023) to create chatbots for class projects (20+). <br>
+                    </li>
+                    <li>Use of SafeChat for chatbots in education, election (Mississippi). <br>
                     </li>
                   </ul>
               </td> 
