update chatbot page

--- a/projects/chatbots_page/index.html
+++ b/projects/chatbots_page/index.html
@@ -68,14 +68,14 @@
                       <a href='./presentations/ICAIF2023_KL_Pres.pdf' target="_blank">[Slides]</a>
                       </li>
                       
-                        <li><b>Trust and ethical considerations in a multi-modal, explainable AI-driven chatbot
-                                    tutoring system: The case of collaboratively solving Rubik’s Cube</b><br>
-                                <i>ICML 2023 TEACH Conversational AI Workshop, Hawaii, 2023</i><br>
-                                Kausik Lakkaraju, Vedant Khandelwal, Biplav Srivastava, Forest Agostinelli, Hengtao
-                                Tang, Prathamjeet Singh, Dezhi Wu, Matt Irvin, Ashish Kundu<br>
-                                <a href='https://drive.google.com/file/d/14kmrr7HTFXtdpzx-7KEItftQAO_6m5li/view'
-                                    target="_blank">[Paper]</a>
-                        </li>
+                      <li>Trust and ethical considerations in a multi-modal, explainable AI-driven chatbot
+                                  tutoring system: The case of collaboratively solving Rubik’s Cube<br>
+                              <i>ICML 2023 TEACH Conversational AI Workshop, Hawaii, 2023</i><br>
+                              Kausik Lakkaraju, Vedant Khandelwal, Biplav Srivastava, Forest Agostinelli, Hengtao
+                              Tang, Prathamjeet Singh, Dezhi Wu, Matt Irvin, Ashish Kundu<br>
+                              <a href='https://drive.google.com/file/d/14kmrr7HTFXtdpzx-7KEItftQAO_6m5li/view'
+                                  target="_blank">[Paper]</a>
+                      </li>
                   </ul>
 
                     
