--- a/index.html
+++ b/index.html
@@ -120,7 +120,14 @@
                     <div class="timeline-item">
                       <div class="timeline-dot"></div>
                       <div class="timeline-date month">October</div>
+                      
                       <div class="timeline-content">
+                        We have launched <p><a target="_blank" href="https://ai4society.github.io/projects/chatbots_page/elections_2024.html">ElectionBot-SC</a>,
+                        a chatbot to help get information about 2024 elections in South Carolina. See a demo and participate
+                        in IRB-approved studies.</p>
+                      </div>
+
+                     <div class="timeline-content">
                         <p><a target="_blank" href="https://sites.google.com/site/biplavsrivastava">Biplav
                             Srivastava</a> will be a panelist at the University of South Carolina School of
                           Law’s
