--- a/index.html
+++ b/index.html
@@ -122,15 +122,14 @@
                       <div class="timeline-date month">October</div>
                       
                       <div class="timeline-content">
-                        We have launched <p><a target="_blank" href="https://ai4society.github.io/projects/chatbots_page/elections_2024.html">ElectionBot-SC</a>, a chatbot for voters to help get information about 2024 elections in South Carolina. See a demo and participate
+                        <p>We have launched <a target="_blank" href="https://ai4society.github.io/projects/chatbots_page/elections_2024.html">ElectionBot-SC</a>, a chatbot for voters to help get information about 2024 elections in South Carolina. See a demo and participate
                         in IRB-approved studies.</p>
                       </div>
 
                      <div class="timeline-content">
                         <p><a target="_blank" href="https://sites.google.com/site/biplavsrivastava">Biplav
-                            Srivastava</a> will be a panelist at the University of South Carolina School of
-                          Law’s
-                          upcoming symposium titled “AI and Elections.” Click <a
+                            Srivastava</a> participated as a panelist at the University of South Carolina School of
+                          Law’s  symposium titled “AI and Elections” on Oct 4, 2024. Click <a
                             href="https://sc.edu/study/colleges_schools/law/academics/conferences_and_symposia/ai_voting/index.php"
                             target="_blank">here</a>
                           for more details.</p>
