--- a/projects/chatbots_page/index.html
+++ b/projects/chatbots_page/index.html
@@ -81,8 +81,9 @@
                     
                   <p><i><b>Representative Activities</b></i></p>
                   <ul>
-                    <li>Use of SafeChat in CSCE 580 (Fall 2023) to create chatbots for class projects (20+). <br>
+                    <li>Use of SafeChat in CSCE 580 (Fall 2023) to create chatbot interface for <a href="https://github.com/vnagpal25/Water-Quality-Chatbot">Water Quality Decider System</a>. <br>
                     </li>
+                    <li>Use of SafeChat in creating <a href="https://github.com/vnagpal25/USC-Chatbot.git">Garnet n Talk</a>, a chatbot designed to answer questions about the University of South Carolina. This project was awarded Best Idea in the USC Spring 2024 Hackathon.</li>
                     <li>Use of SafeChat for chatbots in education, election (Mississippi). <br>
                     </li>
                       
