--- a/projects/chatbots_page/elections_2024.html
+++ b/projects/chatbots_page/elections_2024.html
@@ -63,12 +63,13 @@
                   <p><i><b>Representative Publications</b></i></p>
                   <ul>
                     <li>A Vision for Reinventing Credible Elections with Artificial Intelligence | 2024 <br>
-                        <i><b>Authors: </b>Biplav Srivastava</i> <br>
+                        <i><b>Authors: </b>Biplav Srivastava</i>, DOI: 10.13140/RG.2.2.13700.13443.
                         <a href='http://dx.doi.org/10.13140/RG.2.2.13700.13443' target="_blank">[Paper]</a>
                       </li>
                       <br>
                     <li>ElectionBot-SC: A Tool to Understand and Compare Chatbot Behavior for Safe Election Information in South Carolina | 2024 <br>
-                      <i><b>Authors: </b>Bharath Muppasani, Kausik Lakkaraju, Nitin Gupta, Vansh Nagpal, Sara Jones, Biplav Srivastava</i> <br>
+                      <i><b>Authors: </b>Bharath Muppasani, Kausik Lakkaraju, Nitin Gupta, Vansh Nagpal, Sara Jones, Biplav Srivastava</i>,
+                        DOI: 10.13140/RG.2.2.14188.37761. 
                       <a href='../../publications/papers_local/AAAI_25_SafeChat_Demo.pdf' target="_blank">[Paper]</a>
                     </li>
                   </ul> 
