--- a/publications/index.html
+++ b/publications/index.html
@@ -90,7 +90,7 @@
                                 <i>Thirty-eighth Annual Conference on Neural Information Processing Systems (NeurIPS), Vancouver, 2024 [Info Spread, Planning, AR=25.8%]</i><br>
                                 Bharath Muppasani, Protik Nag, Vignesh Narayanan, Biplav Srivastava, Michael Huhns
                                 <br>
-                                <a href='./papers_local/Neurips_2024_final.pdf' target="_blank">[Paper]</a>
+                                <a href='https://openreview.net/forum?id=LYivxMp5es' target="_blank">[Paper]</a>
                                 <span class="tag tag-method">Dynamical Systems</span>
                                 <span class="tag tag-method">Reinforcement Learning</span>
                                 <br>
