updated news and papers - cods comad 24

--- a/publications/index.html
+++ b/publications/index.html
@@ -59,7 +59,6 @@
                                 <p>Chatbots</p>
                                 <p>Neuro-Symbolic AI</p>
                                 <p>Dynamical Systems</p>
-                                <p>Reinforcement Learning</p>
                             </div>
                         </div>
                         <div class="legend-item">
@@ -85,14 +84,27 @@
                         <h2>2024</h2>
                         <ul class="papers-list">
 
+                            <li><b>Building a Plan Ontology to Represent and Exploit Planning Knowledge and Its Applications</b>
+                                </i><br>
+                                <i>Eighth International Conference on Data Science and Management of Data (CODS-COMAD '24), India, 2024.</i><br>
+                                Bharath Muppasani, Nitin Gupta, Vishal Pallagani, Biplav Srivastava, Raghava Mutharaju, Michael Huhns, Vignesh Narayanan
+                                <br>
+                                <a href='./papers_local/CODS_24_AI_Planning_Ontology.pdf' target="_blank">[Paper]</a>
+                                <span class="tag tag-type">Conference</span>
+                                <span class="tag tag-method">Automated Planning</span>
+                                <span class="tag tag-method">Ontology</span>
+                                <br>
+
                             <li><b>Towards Effective Planning Strategies for Dynamic Opinion Networks</b>
                                 </i><br>
-                                <i>Thirty-eighth Annual Conference on Neural Information Processing Systems (NeurIPS), Vancouver, 2024 [Info Spread, Planning, AR=25.8%]</i><br>
+                                <i>Thirty-eighth Annual Conference on Neural Information Processing Systems (NeurIPS),
+                                    Vancouver, 2024 (Info Spread, AR=25.8%)</i><br>
                                 Bharath Muppasani, Protik Nag, Vignesh Narayanan, Biplav Srivastava, Michael Huhns
                                 <br>
                                 <a href='https://openreview.net/forum?id=LYivxMp5es' target="_blank">[Paper]</a>
+                                <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Dynamical Systems</span>
-                                <span class="tag tag-method">Reinforcement Learning</span>
+                                <span class="tag tag-method">Automated Planning</span>
                                 <br>
 
                             <li><b>AI-Assisted Research Collaboration with Open Data for Fair and Effective
@@ -102,7 +114,7 @@
                                 Siva Likitha Valluru, Michael Widener, Biplav Srivastava, Sriraam Natarajan, Sugata
                                 Gangopadhyay
                                 <br>
-                                [Paper - coming soon]</a>
+                                <a href="https://onlinelibrary.wiley.com/doi/10.1002/aaai.12203" target="_blank">[Paper]</a>
                                 <span class="tag tag-method">Data Analysis</span>
                                 <span class="tag tag-method">Recommender Systems</span>
                                 <br>
