--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
                       <div class="timeline-date month">October</div>
 
                       <div class="timeline-content">
+                        <p>Our <a href='./publications/papers_local/CODS_24_AI_Planning_Ontology.pdf' target="_blank">paper</a>,
+                          'Building a Plan Ontology to Represent and Exploit Planning Knowledge and Its Applications' is accepted at <a
+                            target="_blank" href="https://cods-comad.in/index.php">Eighth International Conference
+                            on Data Science and Management of Data, India, 2024</a>.</p>
+                      </div>
+
+                      <div class="timeline-content">
                         <p>We have launched <a target="_blank"
                             href="https://ai4society.github.io/projects/chatbots_page/elections_2024.html">ElectionBot-SC</a>,
                           a chatbot for voters to help get information about 2024 elections in South Carolina. See a
