--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <p>Our <a href='./publications/papers_local/CODS_24_AI_Planning_Ontology.pdf' target="_blank">paper</a>,
                           'Building a Plan Ontology to Represent and Exploit Planning Knowledge and Its Applications' is accepted at <a
                             target="_blank" href="https://cods-comad.in/index.php">Eighth International Conference
-                            on Data Science and Management of Data, India, 2024</a>.</p>
+                            on Data Science and Management of Data, India, 2024.</a> For more details, visit <a href="https://ai4society.github.io/planning-ontology/" target="_blank">Planning-Ontology</a>.</p>
                       </div>
 
                       <div class="timeline-content">
