--- a/publications/index.html
+++ b/publications/index.html
@@ -59,6 +59,7 @@
                                 <p>Chatbots</p>
                                 <p>Neuro-Symbolic AI</p>
                                 <p>Dynamical Systems</p>
+                                <p>Ontology</p>
                             </div>
                         </div>
                         <div class="legend-item">
@@ -87,7 +88,7 @@
                             <li><b>Building a Plan Ontology to Represent and Exploit Planning Knowledge and Its Applications</b>
                                 </i><br>
                                 <i>Eighth International Conference on Data Science and Management of Data (CODS-COMAD '24), India, 2024.</i><br>
-                                Bharath Muppasani, Nitin Gupta, Vishal Pallagani, Biplav Srivastava, Raghava Mutharaju, Michael Huhns, Vignesh Narayanan
+                                Bharath Muppasani, Nitin Gupta, Vishal Pallagani, Biplav Srivastava, Raghava Mutharaju, Michael N. Huhns and Vignesh Narayanan
                                 <br>
                                 <a href='./papers_local/CODS_24_AI_Planning_Ontology.pdf' target="_blank">[Paper]</a>
                                 <span class="tag tag-type">Conference</span>
@@ -99,7 +100,7 @@
                                 </i><br>
                                 <i>Thirty-eighth Annual Conference on Neural Information Processing Systems (NeurIPS),
                                     Vancouver, 2024 (Info Spread, AR=25.8%)</i><br>
-                                Bharath Muppasani, Protik Nag, Vignesh Narayanan, Biplav Srivastava, Michael Huhns
+                                Bharath Muppasani, Protik Nag, Vignesh Narayanan, Biplav Srivastava and Michael N. Huhns
                                 <br>
                                 <a href='https://openreview.net/forum?id=LYivxMp5es' target="_blank">[Paper]</a>
                                 <span class="tag tag-type">Conference</span>
@@ -135,7 +136,7 @@
                                     Methods</b><br>
                                 <i>Heuristics and Search for Domain-Independent Planning (HSDIP) Workshop at ICAPS
                                     2024</i><br>
-                                Bharath Muppasani, Vishal Pallagani, Biplav Srivastava, Forest Agostinelli<br>
+                                Bharath Muppasani, Vishal Pallagani, Biplav Srivastava and Forest Agostinelli<br>
                                 <a href='./papers_local/Rubik_s_Cube___HSDIP_camera_submission.pdf'
                                     target="_blank">[Paper]</a>
                                 <a href="./presentations/RC_HSDIP_ICAPS24.pdf" target="_blank">[Slides]</a>
@@ -155,7 +156,7 @@
                             <li><b>Solving the Rubik's Cube with a PDDL Planner</b><br>
                                 <i>Proceedings of the 34th International Conference on Automated Planning and Scheduling
                                     (ICAPS) - Demonstration Track (ICAPS-24 Demo)</i><br>
-                                Bharath Muppasani, Vishal Pallagani, Biplav Srivastava<br>
+                                Bharath Muppasani, Vishal Pallagani and Biplav Srivastava<br>
                                 <a href='./papers_local/RC_ICAPS_24_Demo.pdf' target="_blank">[Paper]</a>
                                 <a href="./presentations/RC_ICAPS-24_Demo Poster.pdf" target="_blank">[Poster]</a>
                                 <a href='https://youtu.be/YQZ2sj-x5js' target="_blank">[Video]</a>
@@ -190,7 +191,7 @@
                                     Networks Using Planning</b><br>
                                 <i>Proceedings of the Thirty-Eighth Annual Conference of Association for Advancement of
                                     Artificial Intelligence - Demonstrations Track (AAAI-24 Demo)</i><br>
-                                Bharath Muppasani, Vignesh Narayanan, Biplav Srivastava, Michael N. Huhns<br>
+                                Bharath Muppasani, Vignesh Narayanan, Biplav Srivastava and Michael N. Huhns<br>
                                 <a href='./papers_local/InfoSpread_AAAI24_Demo.pdf' target="_blank">[Paper]</a>
                                 <a href="./papers_local/AAAI-24_Demo_Poster.pdf" target="_blank">[Poster]</a>
                                 <a href="https://drive.google.com/file/d/19d65zjSoFBSngCIPrteT0_DOlymmkEiM/view?usp=drive_link"
@@ -246,6 +247,15 @@
 
                         <h2>2023</h2>
                         <ul class="papers-list">
+
+                            <li><b>Building and Using a Planning Ontology from Past Data for Performance Efficiency</b><br>
+                                <i>Planning and Ontology Workshop (PLATO), ICAPS 2023, Prague, CZ</i><br>
+                                Bharath Muppasani, Vishal Pallagani, Biplav Srivastava and Raghava Mutharaju<br>
+                                <a href='https://ceur-ws.org/Vol-3493/short-paper-2.pdf' target="_blank">[Paper]</a>
+                                <span class="tag tag-type">Workshop</span>
+                                <span class="tag tag-method">Automated Planning</span>
+                                <span class="tag tag-method">Ontology</span>
+                                <br>
 
                             <li><b>Value-based Fast and Slow AI Nudging</b><br>
                                 <i>Ethics and Trust in Human-AI Collaboration: Socio-Technical Approaches Workshop at
