--- a/publications/index.html
+++ b/publications/index.html
@@ -91,6 +91,7 @@
                                 Bharath Muppasani, Nitin Gupta, Vishal Pallagani, Biplav Srivastava, Raghava Mutharaju, Michael N. Huhns and Vignesh Narayanan
                                 <br>
                                 <a href='./papers_local/CODS_24_AI_Planning_Ontology.pdf' target="_blank">[Paper]</a>
+                                <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Automated Planning</span>
                                 <span class="tag tag-method">Ontology</span>
