--- a/index.html
+++ b/index.html
@@ -122,10 +122,22 @@
                       <div class="timeline-date month">October</div>
 
                       <div class="timeline-content">
-                        <p>Our <a href='./publications/papers_local/CODS_24_AI_Planning_Ontology.pdf' target="_blank">paper</a>,
-                          'Building a Plan Ontology to Represent and Exploit Planning Knowledge and Its Applications' is accepted at <a
-                            target="_blank" href="https://cods-comad.in/index.php">Eighth International Conference
-                            on Data Science and Management of Data, India, 2024.</a> For more details, visit <a href="https://ai4society.github.io/planning-ontology/" target="_blank">Planning-Ontology</a>.</p>
+                        <p>Our <a href='https://onlinelibrary.wiley.com/doi/10.1002/aaai.12203'
+                            target="_blank">magazine</a>,
+                          'AI-Assisted Research Collaboration With Open Data for Fair and Effective Response to Call for
+                          Proposals' is accepted at <a target="_blank" href="https://cods-comad.in/index.php">AAAI AI
+                            Magazine, 2024.</a>.</p>
+                      </div>
+
+                      <div class="timeline-content">
+                        <p>Our <a href='./publications/papers_local/CODS_24_AI_Planning_Ontology.pdf'
+                            target="_blank">paper</a>,
+                          'Building a Plan Ontology to Represent and Exploit Planning Knowledge and Its Applications' is
+                          accepted at <a target="_blank" href="https://cods-comad.in/index.php">Eighth International
+                            Conference
+                            on Data Science and Management of Data, India, 2024.</a> For more details, visit <a
+                            href="https://ai4society.github.io/planning-ontology/"
+                            target="_blank">Planning-Ontology</a>.</p>
                       </div>
 
                       <div class="timeline-content">
@@ -157,7 +169,9 @@
                           'Towards Effective Planning Strategies for Dynamic Opinion Networks' is accepted at <a
                             target="_blank" href="https://neurips.cc/Conferences/2024">Thirty-eighth Annual Conference
                             on Neural Information Processing Systems (NeurIPS), Vancouver, 2024</a> for poster
-                          presentation. <a target="_blank" href="https://www.linkedin.com/posts/bharath-9798_github-bharathmuppasanineurips-submission-activity-7253111146663002112-Q_QD?utm_source=share&utm_medium=member_desktop">LinkedIn post</a></p>
+                          presentation. <a target="_blank"
+                            href="https://www.linkedin.com/posts/bharath-9798_github-bharathmuppasanineurips-submission-activity-7253111146663002112-Q_QD?utm_source=share&utm_medium=member_desktop">LinkedIn
+                            post</a></p>
                       </div>
 
                       <div class="timeline-content">
