--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             target="_blank">magazine</a>,
                           'AI-Assisted Research Collaboration With Open Data for Fair and Effective Response to Call for
                           Proposals' is accepted at <a target="_blank" href="https://cods-comad.in/index.php">AAAI AI
-                            Magazine, 2024.</a>.</p>
+                            Magazine, 2024</a>.</p>
                       </div>
 
                       <div class="timeline-content">
