--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                         <p>Our <a href='https://onlinelibrary.wiley.com/doi/10.1002/aaai.12203'
                             target="_blank">magazine</a>,
                           'AI-Assisted Research Collaboration With Open Data for Fair and Effective Response to Call for
-                          Proposals' is accepted at <a target="_blank" href="https://cods-comad.in/index.php">AAAI AI
+                          Proposals' is accepted at <a target="_blank"
+                            href="https://onlinelibrary.wiley.com/journal/23719621">AAAI AI
                             Magazine, 2024</a>.</p>
                       </div>
 
