Adding AAAI25 Student Traffic Paper

--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@
                       <div class="timeline-date month">October</div>
 
                       <div class="timeline-content">
+                        <p>Our <a href='https://www.researchgate.net/publication/384867329_Towards_Enhancing_Road_Safety_in_South_Carolina_Using_Insights_from_Traffic_and_Driver-Education_Data'
+                          target="_blank">student paper</a>, 'Towards Enhancing Road Safety in South Carolina Using Insights from Traffic and Driver-Education Data' is accepted for the for <a href="https://aaai.org/conference/aaai/aaai-25/" target="_blank">AAAI-25</a> Student Abstract and Poster Program</a>.
+                        </p>
+                      </div>
+                      
+                      <div class="timeline-content">
                         <p>Our <a href='https://onlinelibrary.wiley.com/doi/10.1002/aaai.12203'
                             target="_blank">magazine</a>,
                           'AI-Assisted Research Collaboration With Open Data for Fair and Effective Response to Call for
