--- a/projects/traffic_page/index.html
+++ b/projects/traffic_page/index.html
@@ -249,9 +249,11 @@
                       <td style="padding-left:2.5%;width:63%;vertical-align:middle">
                       <p><i><b>Representative Publications</b></i></p>
                       <ul>
-                        <li><i>[Preprint] </i>Towards Enhancing Road Safety in South Carolina Using Insights from Traffic and Driver-Education Data<br> 
-                          <i><b>Authors: </b>Nitin Gupta, Bharath Muppasani, Saina Srivastava, Aarohi Goel, Ross Hartfield, Todd Buehrig, Melissa Reck, Emma Kennedy, Kevin Poore, Karilyn Tremblay, Biplav Srivastava, Lucas Vasconcelos</i> 
-                          <a href="https://www.researchgate.net/publication/384867329_Towards_Enhancing_Road_Safety_in_South_Carolina_Using_Insights_from_Traffic_and_Driver-Education_Data" target="_blank"><b>[Paper]</b></a>
+                        <li>Towards Enhancing Road Safety in South Carolina Using Insights from Traffic and Driver-Education Data<br> 
+                          <i>Nitin Gupta, Bharath Muppasani, Saina Srivastava, Aarohi Goel, Ross Hartfield, Todd Buehrig, Melissa Reck, Emma Kennedy, Kevin Poore, Karilyn Tremblay, Biplav Srivastava, Lucas Vasconcelos</i>
+                          <br><i>Accepted for AAAI-25 Student Abstract and Poster Program, Philadelphia, USA, Feb 2025</i>
+                          <a href="https://www.researchgate.net/publication/384867329_Towards_Enhancing_Road_Safety_in_South_Carolina_Using_Insights_from_Traffic_and_Driver-Education_Data" target="_blank">
+                            <br><b>[Paper]</b></a>
                         </li>
                       </ul>
                       </td>
