--- a/publications/index.html
+++ b/publications/index.html
@@ -69,6 +69,7 @@
                                 <p>Finance</p>
                                 <p>Elections</p>
                                 <p>Water</p>
+                                <p>Traffic</p>
                             </div>
                         </div>
                         <!-- Horizontal line inside the legend box -->
@@ -84,6 +85,17 @@
 
                         <h2>2024</h2>
                         <ul class="papers-list">
+
+                            <li><b>Towards Enhancing Road Safety in South Carolina Using Insights from Traffic and Driver-Education Data</b>
+                                </i><br>
+                                <i>AAAI-25, Philadelphia, USA, Feb 2025</i><br>
+                                Nitin Gupta, Bharath Muppasani, Saina Srivastava, Aarohi Goel, Ross Hartfield, Todd Buehrig, Melissa Reck, Emma Kennedy, Kevin Poore, Karilyn Tremblay, Biplav Srivastava, Lucas Vasconcelos
+                                <br>
+                                <a href='https://www.researchgate.net/publication/384867329_Towards_Enhancing_Road_Safety_in_South_Carolina_Using_Insights_from_Traffic_and_Driver-Education_Data' target="_blank">[Paper]</a>
+                                <span class="tag tag-type">Conference</span>
+                                <span class="tag tag-method">Data Analysis</span>
+                                <span class="tag tag-method">Traffic</span>
+                                <br>
 
                             <li><b>Building a Plan Ontology to Represent and Exploit Planning Knowledge and Its Applications</b>
                                 </i><br>
