--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                       <div class="timeline-content">
                         <p>Our <a href='https://www.researchgate.net/publication/384867329_Towards_Enhancing_Road_Safety_in_South_Carolina_Using_Insights_from_Traffic_and_Driver-Education_Data'
-                          target="_blank">student paper</a>, 'Towards Enhancing Road Safety in South Carolina Using Insights from Traffic and Driver-Education Data' is accepted for the for <a href="https://aaai.org/conference/aaai/aaai-25/" target="_blank">AAAI-25</a> Student Abstract and Poster Program</a>.
+                          target="_blank">student paper</a>, 'Towards Enhancing Road Safety in South Carolina Using Insights from Traffic and Driver-Education Data' is accepted in the <a href="https://aaai.org/conference/aaai/aaai-25/" target="_blank">AAAI-25</a> Student Abstract and Poster Program</a>.
                         </p>
                       </div>
                       
