--- a/publications/index.html
+++ b/publications/index.html
@@ -88,7 +88,7 @@
 
                             <li><b>Towards Enhancing Road Safety in South Carolina Using Insights from Traffic and Driver-Education Data</b>
                                 </i><br>
-                                <i>AAAI-25, Philadelphia, USA, Feb 2025</i><br>
+                                <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA, Feb 2025</i><br>
                                 Nitin Gupta, Bharath Muppasani, Saina Srivastava, Aarohi Goel, Ross Hartfield, Todd Buehrig, Melissa Reck, Emma Kennedy, Kevin Poore, Karilyn Tremblay, Biplav Srivastava, Lucas Vasconcelos
                                 <br>
                                 <a href='https://www.researchgate.net/publication/384867329_Towards_Enhancing_Road_Safety_in_South_Carolina_Using_Insights_from_Traffic_and_Driver-Education_Data' target="_blank">[Paper]</a>
