--- a/projects/chatbots_page/index.html
+++ b/projects/chatbots_page/index.html
@@ -52,8 +52,16 @@
               <a target="_blank" href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav
                 Srivastava</a></i>
             <br>
-            SafeChat is an architecture that aims to provide a safe and secure environment for users to interact with AI
-            chatbots across various domains.
+
+            SafeChat is an architecture that aims to provide a safe and secure 
+            environment for users to interact with AI chatbots in trust-sensitive 
+            domains. It uses a combination of neural (learning-based, including 
+            generative AI) and symbolic (rule-based) methods, together called a 
+            neuro-symbolic approach, to provide known information in easy-to-use 
+            consume forms that are personalized from user interactions (provenance). 
+            The chatbots generated are scalable, quick to build and is evaluated 
+            for trust issues like fairness, robustness and appropriateness of responses.
+
           </p>
           <p><i><b>Representative Publications</b></i></p>
           <ul>
