update safechat - chatbot page

--- a/projects/chatbots_page/index.html
+++ b/projects/chatbots_page/index.html
@@ -58,7 +58,7 @@
             domains. It uses a combination of neural (learning-based, including 
             generative AI) and symbolic (rule-based) methods, together called a 
             neuro-symbolic approach, to provide known information in easy-to-use 
-            consume forms that are personalized from user interactions (provenance). 
+            consume forms that are adapted from user interactions (provenance). 
             The chatbots generated are scalable, quick to build and is evaluated 
             for trust issues like fairness, robustness and appropriateness of responses.
 
