update traffic page

--- a/projects/index.html
+++ b/projects/index.html
@@ -249,7 +249,7 @@
                          <!-- <i><b>Team: </b>University of South Carolina, South Carolina Department of Health and Environmental Control (DHEC), South Carolina Department of Public Safety (SCDPS), National Safety Council Southeastern Chapter (NSCSC)</i> -->
                         <p><b>Description: </b>The project aims to enhance road safety in South Carolina by analysing traffic data provided by Department of Transportation. We focused on identifying collision patterns and evaluating the Alive@25 program's impact to develop targeted recommendations for reducing accidents and improving road safety initiatives across urban and rural areas.</p>
                             <span>
-                                <a style="background-color: #3498db; color: white; padding: 2px 3px; text-decoration: none; border-radius: 4px; margin: 5px 0; display: inline-block;" href="./traffic_page/index.html" target="_blank"><b>More Details</b></a>
+                                <a style="background-color: #3498db; color: white; padding: 2px 3px; text-decoration: none; border-radius: 4px; margin: 5px 0; display: inline-block;" href="./traffic-page/index.html" target="_blank"><b>More Details</b></a>
                             </span>
                         
                     </td>
