--- a/activities/index.html
+++ b/activities/index.html
@@ -80,7 +80,6 @@
                               <span class="activities-content-month">June</span>
                             </p>
                           </div>
-                        
                           <div class="activities-content">
                             <p>
                               <span class="activities-content-title">Tutorial track at CODS-COMAD 2024</span><br>
@@ -118,9 +117,16 @@
                         <div class="activities-container">
                           <h2 class="activities-type">Tutorials</h2>
                         </div>                        
-                      
                         <div class="activities-item">
                           <div class="activities-year">2024</div>
+                          <div class="activities-content">
+                            <p>
+                              <span class="activities-content-title">Tutorial on <a href="https://sites.google.com/view/raasta2024icaif/" target="_blank">Evaluating and Rating AI Systems for Trust and Its Application to Finance</a></span><br>
+                              <span class="activities-content-event"><a href="https://ai-finance.org/" target="_blank">5th ACM International Conference on AI in Finance (ICAIF-24)</a></span><br>
+                              <span class="activities-content-members">Kausik Lakkaraju, Rachneet Kaur, Sunandita Patra, and Biplav Srivastava</span><br>
+                              <span class="activities-content-month">November</span>
+                            </p>
+                          </div>
                           <div class="activities-content">
                             <p>
                               <span class="activities-content-title">Tutorial on <a href="https://github.com/VishalPallagani/LLMsforPlanningLab-AAAI24" target="_blank">Harnessing Large Language Models for Planning: A Lab on Strategies for Success and Mitigation of Pitfalls</a></span><br>
